--- a/last2weeks/lambdaCSS.css
+++ b/last2weeks/lambdaCSS.css
@@ -58,13 +58,13 @@ Easy changes :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-
 
 /* Background-color of text on selection */
 ::-moz-selection {
-/*     color: #000;
-    background-color:#f4f4f4; */
+      color: #000;
+    background-color:#f4f4f4; 
 }
 
 ::selection {
-/*     color: #000;
-    background-color:#f4f4f4; */
+      color: #000;
+    background-color:#f4f4f4;
 }
 
 a, a:visited{
@@ -219,7 +219,7 @@ Defines the typography for texts in reader */
 	margin-bottom: 0px;
     padding-bottom: 20px;
 	padding-right: 0;
-	padding-top: 25px;
+	padding-top: 7%;
 	font-size: 4.5em;
 	line-height: 1.1em;
     -webkit-margin-before: 0em;
@@ -231,7 +231,7 @@ Defines the typography for texts in reader */
     letter-spacing: 2%;
     border-top: 1px solid #dbdbdb;
     color: #222222;
-    margin-top: 60px;
+    margin-top: 16%;
 }
 
 .shadow{
@@ -308,12 +308,13 @@ Defines the typography for texts in reader */
 }
 
 .references a{
-    color:#f30;
+    color:black;
+    text-decoration: underline;
 }
 
 .references a:hover{
     color:#f30;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .references h3{
@@ -481,17 +482,13 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
     position:fixed;
     overflow: hidden;
    z-index: 999999999999999999999999;
-    
-    /* 
-    
-    background: rgb(255,255,255); Old browsers
-    background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(247,247,247,1) 71%, rgba(244,244,244,1) 100%); FF3.6-15
-    background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 71%,rgba(244,244,244,1) 100%); Chrome10-25,Safari5.1-6
-    background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 71%,rgba(244,244,244,1) 100%); W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f4f4f4',GradientType=0 ); IE6-9 */
-    
-    background-color:white;
-    background-attachment: fixed;    
+    background: rgb(255,255,255); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(247,247,247,1) 64%, rgba(201,201,201,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 64%,rgba(201,201,201,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 64%,rgba(201,201,201,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#c9c9c9',GradientType=0 ); /* IE6-9 */
+
+    background-attachment: fixed;   
     border-right: 1px solid #f4f4f4;
     overflow-y: auto;
     padding-top:10px;
@@ -1251,7 +1248,7 @@ input:hover {
     /*padding-right: 2%;*/
 /*     background-color:white;
     height: 999999999999999999999999999px; */
-
+    height: auto;
 }
 
 #chapter8 {
@@ -1263,16 +1260,13 @@ input:hover {
 }
 
 #chapter8 ol {
-	/*padding-left: 0%;*/
     list-style: decimal;
     text-indent: 0px;
-   margin-left:25px;
+    margin-left:25px;
     font-size:9px;
     line-height: 12px;
     counter-reset: item;
     list-style-type: none;
-    color:#f30;
-
 }
 
 #chapter8 ol li { 
@@ -1295,8 +1289,8 @@ input:hover {
     hyphens: auto;
     line-break: strict;
     word-break:break-word;
-    border-radius: 8px;
-    background-color: white;
+    /* border-radius: 8px; */
+    font-family: "HKGroteskBold";
 }
 
 #chapter8 ol li p{
@@ -1308,23 +1302,20 @@ input:hover {
 }
 
 #chapter8 ol li p a{
-    color:#f30;
-    text-decoration: none;
-
+    color:black;
+    text-decoration: underline;
 }
 
 #chapter8 ol li p a:hover{
     color:#f30;
-    text-decoration: underline;
+    text-decoration: none;
 
 }
 .sidenote {
     left: 40px;
     -webkit-margin-after: 3px;
-    border: solid 1px #fafafa;
     padding: 2px;
     padding-top: 4px;
-    background-color: rgba(255, 51, 0, 0.42);
 }
 
 .sidenote p{
@@ -1347,9 +1338,9 @@ input:hover {
 /********************************************/
 
 a sup{
-    font-family: "HKGrotesk";
+    font-family: "HKGroteskBold";
     vertical-align: 75%;
-    color:#f30;
+    color:black;
     text-decoration: none;
     /*font-size: small;*/
 }
@@ -1389,6 +1380,7 @@ ol {
     color: #1C33E5;
     border:none;
     height: auto;
+    box-shadow: 0 3px 5px rgba(0,0,0,.135);
 }
 .section .keyword-toggle .btn.active{
     box-shadow: inset 0 3px 5px rgba(0,0,0,.135);
@@ -1417,6 +1409,9 @@ ol {
 .section .btn-default:focus{
 
 }
+
+/******* MENU RIGHT *******/
+
 
 .extra{
     background-color: #dbdbdb;
@@ -1451,7 +1446,7 @@ ol {
     padding-bottom: 2px;
     margin-right:4px;
     line-height: 2em;
-    color: black !important;
+    color: black;
     white-space:nowrap;
 }
 
@@ -1462,6 +1457,28 @@ ol {
     white-space:nowrap;
 }
 
+#keyword-show-all{
+    background-color: rgba(28, 51, 229, 0.1);
+    color: #1C33E5 !important;
+    box-shadow: 0 3px 5px rgba(0,0,0,.135);
+}
+
+#keyword-show-all:active{
+    box-shadow: inset 0 3px 5px rgba(0,0,0,.135);
+    background-color: rgba(28, 51, 229, 0.3);
+}
+
+#highlight-show-all{
+    background-color:rgba(255, 255, 69, 0.2);
+    color:rgb(222, 188, 0);
+    box-shadow: 0 3px 5px rgba(0,0,0,.135);
+}
+
+#highlight-show-all:active{
+    background-color:rgba(255, 255, 69, 0.5);
+    box-shadow: inset 0 3px 5px rgba(0,0,0,.135);
+}
+
 #menu-right{
     position: fixed;
     right:0px;
@@ -1470,7 +1487,6 @@ ol {
 /*     background-color:  #f4f4f4;
     background-color:rgba(255, 78, 0, 0.25); */
     border:none;
-    background-color: #e6e6e6;
     background-color:white;
     border-left: 1px solid #f4f4f4;
 }
@@ -1502,6 +1518,7 @@ ol {
     padding: 8px;
     border:none;
     color: black;
+    margin-top: 4px;
 }
 
 
@@ -1512,6 +1529,7 @@ ol {
     padding: 7px;
     background-color: #f4f4f4;
     border:none;
+    box-shadow: 0 3px 5px rgba(0,0,0,.135);
 }
 .panel-default>.panel-heading a:hover, .panel-default>.panel-heading a:focus{
     color: black;
@@ -1710,11 +1728,18 @@ blockquote {
     overflow: hidden;
     text-overflow:clip;
     height: 25px;
+    box-shadow: 0 3px 5px rgba(0,0,0,.135);
+}
+
+.panel-open{
+    box-shadow: inset 0 3px 5px rgba(0,0,0,.135);
+    background-color:red;
 }
 
 #panel, #panel2, #panel3, #panel4, #panel5, #panel6 {
     padding: 20px;
     display: none;
+    width: 100%;
 }
 
 #panel6 #live-search {
