--- a/last2weeks/lambdaCSS.css
+++ b/last2weeks/lambdaCSS.css
@@ -59,12 +59,14 @@ Easy changes :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-)  :-
 /* Background-color of text on selection */
 ::-moz-selection {
       color: #000;
-    background-color:#f4f4f4; 
+    background-color:rgba(255, 51, 0, 0.19);
+    background-color:rgba(255, 255, 69, 0.28);
 }
 
 ::selection {
       color: #000;
-    background-color:#f4f4f4;
+    background-color:rgba(255, 51, 0, 0.19);
+    background-color:rgba(255, 255, 69, 0.28);
 }
 
 a, a:visited{
@@ -220,7 +222,7 @@ Defines the typography for texts in reader */
     /* 
     width: 78%;
      */
-    color:darkslateblue;
+    color: black;
 }
 /* Title of big part */
 .section h2 {
@@ -239,7 +241,7 @@ Defines the typography for texts in reader */
     vertical-align: middle;
     letter-spacing: 2%;
     border-top: 1px solid #dbdbdb;
-    color: #222222;
+    color: black;
     margin-top: 16%;
 }
 
@@ -380,11 +382,11 @@ body{
 body {
         margin: 0;
         color:black;
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,f7f7f7+64,c9c9c9+100 */
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+47,f7f7f7+75,c9c9c9+100 */
     background: rgb(255,255,255); /* Old browsers */
-    background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(247,247,247,1) 64%, rgba(201,201,201,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 64%,rgba(201,201,201,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 64%,rgba(201,201,201,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(255,255,255,1) 47%, rgba(247,247,247,1) 75%, rgba(201,201,201,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 47%,rgba(247,247,247,1) 75%,rgba(201,201,201,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 47%,rgba(247,247,247,1) 75%,rgba(201,201,201,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#c9c9c9',GradientType=0 ); /* IE6-9 */
 
         background-attachment: fixed;
@@ -496,25 +498,33 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
     height: 100%;
     position:fixed;
     z-index: 999999999999999999999999;
-    background: rgb(255,255,255); /* Old browsers */
-    background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(247,247,247,1) 64%, rgba(201,201,201,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 64%,rgba(201,201,201,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 64%,rgba(201,201,201,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#c9c9c9',GradientType=0 ); /* IE6-9 */
+   
     max-width: 100%;
     background-attachment: fixed;   
     left: 0;
+/* 
+    background: -webkit-linear-gradient(#f30, rgb(255, 213, 203)); For Safari 5.1 to 6.0
+    background: -o-linear-gradient(#f30, rgb(255, 213, 203)); For Opera 11.1 to 12.0
+    background: -moz-linear-gradient(#f30, rgb(255, 213, 203)); For Firefox 3.6 to 15
+    background: linear-gradient(#f30, rgb(255, 213, 203)); Standard syntax  */
+    background-color:rgb(255, 51, 0);
+}
 
+#menu:hover{
+    background-color:#f30;
 }
 
 
 #toc_wrapper{
-    border-right: 1px solid #f4f4f4;
     margin: 0px;
     padding: 0px;
     margin-right: 20px;
     overflow-y:auto;
-    background:white;
+
+    background: -webkit-linear-gradient(#f30, rgb(255, 213, 203)); For Safari 5.1 to 6.0
+    background: -o-linear-gradient(#f30, rgb(255, 213, 203)); For Opera 11.1 to 12.0
+    background: -moz-linear-gradient(#f30, rgb(255, 213, 203)); For Firefox 3.6 to 15
+    background: linear-gradient(#f30, rgb(255, 213, 203)); Standard syntax 
     left: 0;
 }
 
@@ -525,8 +535,6 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
     padding-bottom: 10px;
     font-size: 18px;
     color: white;
-    background-color: #868686;
-    background-color:#dbdbdb;
     vertical-align: middle;
     top:45%;
     z-index: 99999999999999999999999999999999;
@@ -539,10 +547,6 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
     color:white;
 }
 
-.toggle_menu:hover{
-    color:white;
-    background-color:black;
-}
 
 
 /********************************************************
@@ -1157,12 +1161,17 @@ input:hover {
 
      .capitalism, .capital, .creativity, .art, .contemporary, .culture, .ideological, .social, .labor, .attention, .image, .production, .capitalism, .art, .state, .life, .public, .city, .economics, .production, .development, .art, .social, .avant-garde, .world, .big, .Other, .art, .urban, .cultural, .project, .creativity, .Belgrade, .Rog, .capital, .creative, .collective, .urban, .factory, .gentrification, .art, .political, .social, .culture, .autonomy, .public, .work {
          color: #1C33E5;
-    }
+
+         /* 
+         color:#f30;
+          */
+     }
 
 /********CITATIONS************************/
 
     .underline {
-        background-color:rgba(255, 255, 69, 0.48);
+
+        background-color:rgba(255, 51, 0, 0.19);
     }
 
     .remove_highlight {
@@ -1336,6 +1345,8 @@ a sup{
     color:black;
     text-decoration: none;
     /*font-size: small;*/
+    border-bottom: 3px solid #f30;
+    padding-bottom: 0.1em;
 }
 
 a sup:hover{
@@ -1370,7 +1381,11 @@ ol {
     margin-right:4px;
     margin-bottom: 8px;
     background-color: rgba(28, 51, 229, 0.1);
+/*     background-color:rgba(255, 51, 0, 0.1);
+     */    
     color: #1C33E5;
+/*     color:#f30;
+     */    
     border:none;
     height: auto;
     box-shadow: 0 3px 5px rgba(0,0,0,.135);
@@ -1378,6 +1393,9 @@ ol {
 .section .keyword-toggle .btn.active{
     box-shadow: inset 0 3px 5px rgba(0,0,0,.135);
     background-color: rgba(28, 51, 229, 0.3);
+/*     background-color:rgba(255, 51, 0, 0.4);
+    color: #f30; */
+
 }
 .section .keyword-toggle .btn-default:focus{
     
