--- a/last2weeks/lambdaCSS.css
+++ b/last2weeks/lambdaCSS.css
@@ -419,7 +419,7 @@ body {
     position: absolute;
     top: 0;
     padding: 0; */
-    width:100%;
+    /*width:100%;*/
     height: 0%;
     max-height: 100%;
     position: absolute;
@@ -430,10 +430,10 @@ body {
 .horizScroll {
     width: 5px;
     background: #f30; /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(#f30, rgb(255, 213, 203)); For Safari 5.1 to 6.0
+    /*background: -webkit-linear-gradient(#f30, rgb(255, 213, 203)); For Safari 5.1 to 6.0
     background: -o-linear-gradient(#f30, rgb(255, 213, 203)); For Opera 11.1 to 12.0
     background: -moz-linear-gradient(#f30, rgb(255, 213, 203)); For Firefox 3.6 to 15
-    background: linear-gradient(#f30, rgb(255, 213, 203)); Standard syntax 
+    background: linear-gradient(#f30, rgb(255, 213, 203)); Standard syntax */
 }
 
 .horizScroll, .subScroll{
@@ -589,6 +589,7 @@ Table of content is contained in pushmenu, it shows the different parts of the b
 ********OPENS UP THE MENU********/
 #menu_bar {
     display: none;
+    z-index: 999999999999999999;
     background-color: white;
 	height: 100%;
 	width: 5px;
