--- a/last2weeks/lambdaCSS.css
+++ b/last2weeks/lambdaCSS.css
@@ -98,53 +98,175 @@ hr{
 #info-box {
     /*height: auto; */
     overflow: hidden;
-    padding-bottom: 40px;
-    border-bottom: 1px #d8d8d8 solid;
+
+    /* 
     
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f4f4f4+0,f4f4f4+30,ffffff+100 */
-    background: rgb(244,244,244); /* Old browsers */
-    background: -moz-linear-gradient(top,  rgba(244,244,244,1) 0%, rgba(244,244,244,1) 30%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top,  rgba(244,244,244,1) 0%,rgba(244,244,244,1) 30%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom,  rgba(244,244,244,1) 0%,rgba(244,244,244,1) 30%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f4f4f4', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+    Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f4f4f4+0,f4f4f4+30,ffffff+100
+    background: rgb(244,244,244); Old browsers
+    background: -moz-linear-gradient(top,  rgba(244,244,244,1) 0%, rgba(244,244,244,1) 30%, rgba(255,255,255,1) 100%); FF3.6-15
+    background: -webkit-linear-gradient(top,  rgba(244,244,244,1) 0%,rgba(244,244,244,1) 30%,rgba(255,255,255,1) 100%); Chrome10-25,Safari5.1-6
+    background: linear-gradient(to bottom,  rgba(244,244,244,1) 0%,rgba(244,244,244,1) 30%,rgba(255,255,255,1) 100%); W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f4f4f4', endColorstr='#ffffff',GradientType=0 ); IE6-9
+     */
+    
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+15,f4f4f4+48,d6d6d6+100 */
+    background: rgb(255,255,255); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(255,255,255,1) 15%, rgba(244,244,244,1) 48%, rgba(214,214,214,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 15%,rgba(244,244,244,1) 48%,rgba(214,214,214,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(255,255,255,1) 15%,rgba(244,244,244,1) 48%,rgba(214,214,214,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#d6d6d6',GradientType=0 ); /* IE6-9 */
 
     
+    
+    background-attachment: fixed;
     z-index: 44444444444;
     position: relative;
-    background-color:white;
     text-rendering: optimizeSpeed;
     color: black;
-    
-
-    padding-left: 15px;
-
+    padding-left:15px;
+    background: white;
+    border-bottom: 1px solid #d8d8d8;
 }
 
+#info-box-inside-container{
+    background-color:rgb(255, 202, 189);
+    background-color:#f4f4f4;
+/*     margin: 5%;
+    margin-top:1%; */
+    padding-bottom: 40px;
+    -webkit-box-shadow: 10px 10px 25px 0px rgba(0,0,0,0.44);
+    -moz-box-shadow: 10px 10px 25px 0px rgba(0,0,0,0.44);
+    box-shadow: 10px 10px 25px 0px rgba(0,0,0,0.44);
+    color: #f30;
+    height: auto;
+    border: 1px solid #f30;
+}
 
-    
+#info-box-inside-container:hover{
+    border: 1px solid #f30;
+}    
+
 #info-box img{
-    width: 80%;
+    max-height: 300px;
+    width: auto;
     text-align: center;
     margin-top: 40px;
     margin-left: 0px;
     margin-bottom: 40px;
 }
 
+
+/**********************
+3-1. LIBRARY TREE
+***********************/
+
+#library-tree{
+    background-color: white;
+    height: 60px;
+    margin-right: -15px;
+    margin-left: -15px;
+    border-bottom: 1px solid #f4f4f4;
+}
+
+#library-tree #breadcrumb{
+    padding: 0px;
+}
+
 .breadcrumb {
-    padding: 8px 15px;
     margin-bottom: 20px;
     list-style: none;
-    background-color: white;
-    margin-left: -15px;
+    margin: 0px;
+    padding: 0px;
+    text-indent: 0;
+    padding-top:10px;
+    background-color: transparent;
+}
+
+.breadcrumb ol{
+    text-indent: 0;
+    -webkit-margin-before: 0em;
+    -webkit-margin-after: 0em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    -webkit-padding-start: 0px;
+    margin: 0px;
+    padding: 0px;
+}
+
+.breadcrumb>li+li:before {
+    padding: 0 0px;
+    padding-right: 8px;
+    color: #ccc;
+    content: "/\00a0";
+}
+
+#library-tree  #breadcrumb .breadcrumb a{
+    color:#f30;
+    background-color: transparent;
+    padding-top: 2px;
+}
+
+#library-tree  #breadcrumb .breadcrumb>.active a{
+    color:#f30;
+    background-color: transparent;
+    border: 1px solid #f30;
+    padding-top: 2px;
+
+}
+
+#library-tree  #breadcrumb .breadcrumb a:hover{
+    color: white;
+    background-color: #f30;
+    padding-top: 2px;
+
 }
 
 .info {
     height: auto;
 }
 
+
+
+
+
+
+#info-box-book-before, #info-box-book-after{
+    padding-left: 0px;
+    height: 100%;
+    position: absolute;
+    padding-right: 0px;
+}
+
+.info-box-book-before-button, .info-box-book-after-button{
+    background-color:white;
+    color:#f30;
+    width:50%;
+    height: 100%;
+    text-align: center;
+    align-items: center;
+    vertical-align: middle;
+}
+
+.info-box-book-after-button{
+    float: right;
+
+
+}
+
+
+.info-box-book-before-button:hover, .info-box-book-after-button:hover{
+    color:white;
+    background-color:#f30;
+    border: 1px solid #f30;
+    cursor: pointer;
+}
+
+
+
+
 /* How is written the book's title */
 #book-title {
-    font-size: 4em;
+    font-size: 3em;
     margin-top: 10px;
     line-height: 1em;
     padding: 0px;
@@ -168,7 +290,7 @@ hr{
     word-break: keep-all;
     white-space:nowrap;
     background-color: rgba(255, 255, 255, 0.7); */
-    background-color: #dbdbdb;
+    background-color: rgba(0, 0, 0, 0.19);
     border-radius:5px;
     padding: 5px;
     padding-top:2px;
@@ -182,7 +304,7 @@ hr{
 
 #info-box a{
     font-family: "HKGrotesk";
-    background-color: #dbdbdb;
+    background-color: rgba(0, 0, 0, 0.19);
     border-radius:5px;
     padding: 5px;
     padding-top:2px;
@@ -253,9 +375,13 @@ Defines the typography for texts in reader */
     letter-spacing: 2%;
     border-top: 1px solid #dbdbdb;
     color: black;
-    margin-top: 16%;
+    margin-top: 20%;
 }
 
+.section > h2:first-child{
+    margin-top: 7%;
+
+}
 
 .shadow{
  /*    height: 400px;
@@ -285,7 +411,7 @@ Defines the typography for texts in reader */
 
 /* Font-size for the reading text: !! do not change the units (em) to pixels !! */
 .section p {
-    font-size: 2.1em;
+    font-size: 2.2em;
     line-height: 1.55em;
     text-rendering: optimizeLegibility;
     max-width: 580px;
@@ -433,19 +559,20 @@ img {
 	margin-left: 0px;
 	margin-bottom: 20px;
 }
-/* 
+
 img.grayscale {
-    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); Firefox 3.5+, IE10
-    filter: gray; IE6-9
-    -webkit-filter: grayscale(100%); Chrome 19+ & Safari 6+
-    -webkit-transition: all .1s ease; Fade to color for Chrome and Safari
-    -webkit-backface-visibility: hidden; Fix for transition flickering
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+    /*  Firefox 3.5+, IE10 */
+    filter: gray; /*  IE6-9 */
+    -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
+    -webkit-transition: all .1s ease; /* Fade to color for Chrome and Safari */
+    -webkit-backface-visibility: hidden; /* Fix for transition flickering */
 }
 
 img.grayscale:hover {
     filter: none;
     -webkit-filter: grayscale(0%);
-} */
+}
 
 .section .img-caption{
     font-size: 14px;
@@ -506,6 +633,25 @@ body {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f4f4f4',GradientType=0 ); /* IE6-9 */
 
     
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f4f4f4+70,ff3300+100&1+0,0.26+100 */
+    background: -moz-linear-gradient(top,  rgba(244,244,244,1) 0%, rgba(244,244,244,0.48) 70%, rgba(255,51,0,0.26) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(244,244,244,1) 0%,rgba(244,244,244,0.48) 70%,rgba(255,51,0,0.26) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(244,244,244,1) 0%,rgba(244,244,244,0.48) 70%,rgba(255,51,0,0.26) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f4f4f4', endColorstr='#42ff3300',GradientType=0 ); /* IE6-9 */
+
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f4f4f4+48,ff3300+100&1+0,0.20+100 */
+    background: -moz-linear-gradient(top,  rgba(244,244,244,1) 0%, rgba(244,244,244,0.58) 48%, rgba(255,51,0,0.30) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(244,244,244,1) 0%,rgba(244,244,244,0.58) 48%,rgba(255,51,0,0.30) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(244,244,244,1) 0%,rgba(244,244,244,0.58) 48%,rgba(255,51,0,0.30) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f4f4f4', endColorstr='#1fff3300',GradientType=0 ); /* IE6-9 */
+
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+50,f4f4f4+67,d6d6d6+100 */
+    background: rgb(255,255,255); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(255,255,255,1) 50%, rgba(244,244,244,1) 67%, rgba(214,214,214,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 50%,rgba(244,244,244,1) 67%,rgba(214,214,214,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(255,255,255,1) 50%,rgba(244,244,244,1) 67%,rgba(214,214,214,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#d6d6d6',GradientType=0 ); /* IE6-9 */
+
         background-attachment: fixed;
         color: black;
         overflow-x: hidden;
@@ -633,11 +779,17 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
     padding: 0px;
     margin-right: 20px;
     height: 100%;
+    overflow-x: hidden;
     overflow-y: scroll;
     left: 0;
     background-color:white;
     border-right: 1px solid #d8d8d8;
     padding-bottom: 40px;
+    position: absolute;
+}
+
+#toc_wrapper::-webkit-scrollbar {
+    display: none;
 }
 
 #menu-right-wrapper {
@@ -673,9 +825,9 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
     top:45%;
     z-index: 99999999999999999999999999999999;
     height: auto;
-    left: 0px;
+    left: -50px;
     position: absolute;
-    
+
     border-radius: 4px;
     background-color: #f4f4f4;
     border:none;
@@ -688,6 +840,7 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
 .toggle_menu a:hover, .toggle_menu_right a:hover {
     color:#8e8e8e;
 }
+
 
 
 .menu-publication-title{
@@ -712,13 +865,15 @@ Table of content is contained in pushmenu, it shows the different parts of the b
 	margin:10px;
     text-align: left;
     padding-top:4px;
-    border-radius: 8px;
     background-color:white;
     font-size: 14px;
     line-height: 18px;
+    border-bottom: 1px solid #d8d8d8;
+/*  
+    border-radius: 8px;
     -webkit-box-shadow: 0px 0px 18px 1px rgba(142,142,142,0.08);
     -moz-box-shadow: 0px 0px 18px 1px rgba(142,142,142,0.08);
-    box-shadow: 0px 0px 18px 1px rgba(142,142,142,0.08);
+    box-shadow: 0px 0px 18px 1px rgba(142,142,142,0.08); */
     font-family: "HKGrotesk";
 }
 
@@ -741,26 +896,38 @@ Table of content is contained in pushmenu, it shows the different parts of the b
     z-index: 999999999999999999;
     background-color: white;
 	height: 100%;
-	width: 5px;
-	position: fixed;
+    width: 1%;
+    position: fixed;
+    color: black;
 }
 
 /*******VERTICAL SCROLL BAR*******/
 #menu_bar_scroll {	
     height: 0%;
-    width: 5px;
+    width: 1%;
     position: fixed;	
-/* background: -webkit-linear-gradient(#f30, rgb(255, 213, 203), rgba(255, 255, 69, 1), mediumblue); For Safari 5.1 to 6.0
-    background: -o-linear-gradient(#f30, rgb(255, 213, 203), rgba(255, 255, 69, 1), mediumblue); For Opera 11.1 to 12.0
-    background: -moz-linear-gradient(#f30, rgb(255, 213, 203), rgba(255, 255, 69, 1), mediumblue); For Firefox 3.6 to 15
-    background: linear-gradient(#f30, rgb(255, 213, 203), rgba(255, 255, 69, 1), mediumblue); Standard syntax   */
-    
-    background: #f30; /* For browsers that do not support gradients */
-
+    background: rgba(255, 51, 0, 0.8); 
+    /* For browsers that do not support gradients */
+/* 
     background: -webkit-linear-gradient(#f30, rgb(255, 213, 203)); For Safari 5.1 to 6.0
     background: -o-linear-gradient(#f30, rgb(255, 213, 203)); For Opera 11.1 to 12.0
     background: -moz-linear-gradient(#f30, rgb(255, 213, 203)); For Firefox 3.6 to 15
-    background: linear-gradient(#f30, rgb(255, 213, 203)); Standard syntax 
+    background: linear-gradient(#f30, rgb(255, 213, 203)); Standard syntax  */
+}
+
+#menu_bar_title{
+    width: 1%;
+    height: 100%;
+    /* Safari */
+    -webkit-transform: rotate(-90deg);
+    /* Firefox */
+    -moz-transform: rotate(-90deg);
+    /* IE */
+    -ms-transform: rotate(-90deg);
+    /* Opera */
+    -o-transform: rotate(-90deg);
+    /* Internet Explorer */
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
 }
 
 
@@ -1715,7 +1882,10 @@ ol {
     background-color:rgba(255, 78, 0, 0.25); */
     border:none;
     background-color:white;
+
+    /* 
     border-left: 1px solid #d8d8d8;
+     */
     font-family: "HKGrotesk";
 
 }
