--- a/last2weeks/lambdaCSS.css
+++ b/last2weeks/lambdaCSS.css
@@ -270,6 +270,7 @@ hr{
     margin-top: 10px;
     line-height: 1em;
     padding: 0px;
+    padding-left:15Px;
 }
 
 @media (max-width: 480px){
@@ -644,14 +645,14 @@ body {
     background: -webkit-linear-gradient(top,  rgba(244,244,244,1) 0%,rgba(244,244,244,0.58) 48%,rgba(255,51,0,0.30) 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom,  rgba(244,244,244,1) 0%,rgba(244,244,244,0.58) 48%,rgba(255,51,0,0.30) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f4f4f4', endColorstr='#1fff3300',GradientType=0 ); /* IE6-9 */
-
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+50,f4f4f4+67,d6d6d6+100 */
-    background: rgb(255,255,255); /* Old browsers */
-    background: -moz-linear-gradient(top,  rgba(255,255,255,1) 50%, rgba(244,244,244,1) 67%, rgba(214,214,214,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 50%,rgba(244,244,244,1) 67%,rgba(214,214,214,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom,  rgba(255,255,255,1) 50%,rgba(244,244,244,1) 67%,rgba(214,214,214,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#d6d6d6',GradientType=0 ); /* IE6-9 */
-
+/* 
+    Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+50,f4f4f4+67,d6d6d6+100
+    background: rgb(255,255,255); Old browsers
+    background: -moz-linear-gradient(top,  rgba(255,255,255,1) 50%, rgba(244,244,244,1) 67%, rgba(214,214,214,1) 100%); FF3.6-15
+    background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 50%,rgba(244,244,244,1) 67%,rgba(214,214,214,1) 100%); Chrome10-25,Safari5.1-6
+    background: linear-gradient(to bottom,  rgba(255,255,255,1) 50%,rgba(244,244,244,1) 67%,rgba(214,214,214,1) 100%); W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#d6d6d6',GradientType=0 ); IE6-9
+ */
         background-attachment: fixed;
         color: black;
         overflow-x: hidden;
@@ -816,25 +817,30 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
 
 
 .toggle_menu_right {
+
     padding: 1px;
     padding-top: 10px;
     padding-bottom: 10px;
     font-size: 18px;
-    color:#8e8e8e;
+    color: white;
     vertical-align: middle;
-    top:45%;
     z-index: 99999999999999999999999999999999;
-    height: auto;
+    height: 100%;
     left: -50px;
     position: absolute;
-
-    border-radius: 4px;
-    background-color: #f4f4f4;
-    border:none;
+    background-color: white;
+    border-left:0px solid black;
+    width: 50px;
 }
 
-.toggle_menu, .toggle_menu_right a{
-    color:#8e8e8e;
+.toggle_menu_right .toggle_menu_right_button{
+    width:130px;
+    height:50px;
+    -ms-transform:rotate(270deg); /* IE 9 */
+    -moz-transform:rotate(270deg); /* Firefox */
+    -webkit-transform:rotate(270deg); /* Safari and Chrome */
+    -o-transform:rotate(270deg); /* Opera */
+    color:black;
 }
 
 .toggle_menu a:hover, .toggle_menu_right a:hover {
